HW Wireframe 1st attempt - still needs spacing fix, and alignment off of aside element

--- a/style.css
+++ b/style.css
@@ -1,9 +1,68 @@
-div {
-    padding: 25px;
-    background-color: lightgrey;
+body {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777;
+    width: 960px;
+    font-size: 18px;
+    background: #777777;
     margin: 10px;
 }
 
-p {
+header {
+    padding: 25px;
+    background-color: #ebebeb;
+    margin: 10px;
+}
+
+nav {
+    padding: 25px;
+    background-color: #ebebeb;
+    margin: 10px;
+}
+
+section {
+    padding: 25px;
+    background-color: #ebebeb;
+    margin: 10px;
+    width: 495px;
+    float: left;
+}
+
+aside {
+    padding: 25px;
+    background-color: #ebebeb;
+    margin: 10px;
+    width: 325px;
+    height: 217px;
+    float: right;
+}
+
+h1, p{
+    margin: 5px;
+    padding: 10px;
     text-align: center;
+    color: #777;
+    background-color: #ebebeb;
+}
+
+article {
+    margin-block-start: 0em;
+    padding: 10px;
+    color: #ebebeb;
+    background-color: #777;
+}
+
+
+
+footer {
+    padding: 25px;
+    background-color: #ebebeb;
+    margin: 10px;
+    clear: both;
+}
+
+
+.lightgrey {
+    text-align: center;
+    color: #ebebeb;
+    background-color: #777;
 }
